Web Page modifications

--- a/ALS8.html
+++ b/ALS8.html
@@ -43,14 +43,14 @@
                     <li>Winner Selection Independent of Skill, Depends Only On Participation and Performance</li>
                     <li>Payout Calculation to Winners Depends on Performance, With Bias Toward Higher Skill</li>
                     <li>Standard Victory Condition, With Antiquity Mode On</li>
-                    <li>Custom Map Pool, Reworked Ensemble Studios Original Maps</li>
+                    <li>Custom Map Pool, Player Choice Returning Maps</li>
                 </ul>
             </div>
         </div>
 
         <div class="nav-group reference-links" aria-label="Reference links section" role="region">
             <a class="resource-link" data-file="Map_Contest.ods" download>Map Contest Results</a>
-            <a href="https://aoe2cm.net/preset/nOxHA" target="_blank">Map Draft</a>
+            <a href="#" target="_blank">Map Draft</a>
             <a class="resource-link" data-file="Map_Archive.zip" download>Map Archive</a>
             <a href="https://aoe2cm.net/preset/EjvqT" target="_blank">Civilization Draft</a>
         </div>
@@ -65,43 +65,43 @@
                     </tr>
                     <tr>
                         <td>1</td>
-                        <td>ESR_02 "Graveyards"</td>
-                        <td>Jasouki</td>
+                        <td>TBD</td>
+                        <td>TBD</td>
                     </tr>
                     <tr>
                         <td>2</td>
-                        <td>ESR_09 "Team_Glaciers"</td>
-                        <td>welcometorapture</td>
+                        <td>TBD</td>
+                        <td>TBD</td>
                     </tr>
                     <tr>
                         <td>3</td>
-                        <td>ESR_03 "Moats"</td>
-                        <td>Zetnus</td>
+                        <td>TBD</td>
+                        <td>TBD</td>
                     </tr>
                     <tr>
                         <td>4</td>
-                        <td>ESR_08 "Shipwreck"</td>
-                        <td>TechChariot</td>
+                        <td>TBD</td>
+                        <td>TBD</td>
                     </tr>
                     <tr>
                         <td>5</td>
-                        <td>ESR_04 "Paradise_Island"</td>
-                        <td>Magico</td>
+                        <td>TBD</td>
+                        <td>TBD</td>
                     </tr>
                     <tr>
                         <td>6</td>
-                        <td>ESR_06 "Seasons"</td>
-                        <td>Biscuits</td>
+                        <td>TBD</td>
+                        <td>TBD</td>
                     </tr>
                     <tr>
                         <td>7</td>
-                        <td>ESR_05 "Prairie"</td>
-                        <td>TechChariot</td>
+                        <td>TBD</td>
+                        <td>TBD</td>
                     </tr>
                     <tr>
                         <td>8</td>
-                        <td>ESR_01 "Canals"</td>
-                        <td>Zetnus</td>
+                        <td>TBD</td>
+                        <td>TBD</td>
                     </tr>
                 </table>
             </div>
@@ -186,29 +186,29 @@
                         </clipPath>
                     </defs>
                     <!-- HDBK Node -->
-                    <a href="https://Alchemy-AOE-Community.github.io/RedirectLatest.html?file=CHEM-HDBK-L007" data-folder="CHEM-HDBK-L007" target="_blank" tabindex="0" aria-label="HDBK-L007" role="button" class="pdf-link">
+                    <a href="https://Alchemy-AOE-Community.github.io/RedirectLatest.html?file=CHEM-HDBK-L008" data-folder="CHEM-HDBK-L008" target="_blank" tabindex="0" aria-label="HDBK-L008" role="button" class="pdf-link">
                         <g>
-                            <title>HDBK-L007</title>
+                            <title>HDBK-L008</title>
                             <g clip-path="url(#clip-hdbk)">
                                 <image x="49.8" y="2" width="8" height="8" href="images/Handbook.jpg" preserveAspectRatio="xMidYMid slice"/>
                             </g>
                             <rect x="49.8" y="2" width="8" height="8" class="hierarchy-node" rx="3" ry="3"/>
                             <rect x="49.8" y="2" width="8" height="8" class="text-background" rx="3" ry="3"/>
                             <text x="53.8" y="5.2" class="hierarchy-text">HDBK</text>
-                            <text x="53.8" y="6.8" class="hierarchy-text"> -L007</text>
+                            <text x="53.8" y="6.8" class="hierarchy-text"> -L008</text>
                         </g>
                     </a>
                     <!-- PSRM Node -->
-                    <a href="https://Alchemy-AOE-Community.github.io/RedirectLatest.html?file=CHEM-PSRM-ESR-1" data-folder="CHEM-PSRM-ESR-1" target="_blank" tabindex="0" aria-label="PSRM-ESR-1" role="button" class="pdf-link">
+                    <a href="https://Alchemy-AOE-Community.github.io/RedirectLatest.html?file=CHEM-PSRM-002" data-folder="CHEM-PSRM-002" target="_blank" tabindex="0" aria-label="PSRM-002" role="button" class="pdf-link">
                         <g>
-                            <title>PSRM-ESR-1</title>
+                            <title>PSRM-002</title>
                             <g clip-path="url(#clip-psrm)">
                                 <image x="4.8" y="14" width="8" height="8" href="images/Procurement_Spec.jpg" preserveAspectRatio="xMidYMid slice"/>
                             </g>
                             <rect x="4.8" y="14" width="8" height="8" class="hierarchy-node" rx="3" ry="3"/>
                             <rect x="4.8" y="14" width="8" height="8" class="text-background" rx="3" ry="3"/>
                             <text x="8.8" y="17.2" class="hierarchy-text">PSRM</text>
-                            <text x="8.8" y="18.8" class="hierarchy-text">-ESR-1</text>
+                            <text x="8.8" y="18.8" class="hierarchy-text">-002</text>
                         </g>
                     </a>
                     <!-- MTHD Nodes -->
@@ -382,16 +382,16 @@
                         </g>
                     </a>
                     <!-- GSRM Node -->
-                    <a href="https://Alchemy-AOE-Community.github.io/RedirectLatest.html?file=CHEM-GSRM-ESR-1" data-folder="CHEM-GSRM-ESR-1" target="_blank" tabindex="0" aria-label="GSRM-ESR-1" role="button" class="pdf-link">
+                    <a href="https://Alchemy-AOE-Community.github.io/RedirectLatest.html?file=CHEM-GSRM-UNK-1" data-folder="CHEM-GSRM-UNK-1" target="_blank" tabindex="0" aria-label="GSRM-UNK-1" role="button" class="pdf-link">
                         <g>
-                            <title>GSRM-ESR-1</title>
+                            <title>GSRM-UNK-1</title>
                             <g clip-path="url(#clip-gsrm)">
                                 <image x="52.8" y="52.5" width="8" height="8" href="images/General_Spec.jpg" preserveAspectRatio="xMidYMid slice"/>
                             </g>
                             <rect x="52.8" y="52.5" width="8" height="8" class="hierarchy-node" rx="3" ry="3"/>
                             <rect x="52.8" y="52.5" width="8" height="8" class="text-background" rx="3" ry="3"/>
                             <text x="56.8" y="55.7" class="hierarchy-text">GSRM</text>
-                            <text x="56.8" y="57.3" class="hierarchy-text">-ESR-1</text>
+                            <text x="56.8" y="57.3" class="hierarchy-text">-UNK-1</text>
                         </g>
                     </a>
                     <!-- STND Nodes -->
@@ -498,7 +498,7 @@
                         </div>
                         <div class="nav-group__content">
                             <ul>
-                                <li>Participant "cerasito" lacked minimum required games to register (84/100). Exception granted due to being close to target with normal win rate. Player may compete for prize.</li>
+                                <li>Sample Notes</li>
                             </ul>
                         </div>
                     </div>
@@ -508,7 +508,7 @@
                         <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS7_Resources/Sprint1/Seeding_Apparent.ods" target="_blank" download>Seeding Apparent</a>
                         <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS7_Resources/Sprint1/Seeding_Full.ods" target="_blank" download>Seeding Full</a>
                         <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS7_Resources/Sprint1/Round_by_Round.ods" target="_blank" download>Roundwise</a>
-                        <a href="https://docs.google.com/spreadsheets/d/1ytlURpxM8D7gZumt6dKuoAHMSD3z-lRZRLEzTAGaG8w" target="_blank">Live Scoreboard</a>
+                        <a href="#" target="_blank">Live Scoreboard</a>
                         <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS7_Resources/Sprint1/Results.ods" target="_blank" download>Results</a>
                     </div>
                     <div class="nav-group seeding" aria-label="Seeding section" role="region">
@@ -525,7 +525,7 @@
                             <h2>Live Scoreboard</h2>
                         </div>
                         <div class="nav-group__content">
-                            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTvlsM1PKva5GtEtSMl-N_clMz1xuDmHnv8yoZnz7Yu_nejeLOvW1Wo9t2YG3ebTHXhXC9o0kaCAap9/pubhtml?gid=0&single=true" width="100%" height="100%" frameborder="0" title="Live Scoreboard" onload="adjustBottomRowHeight()"></iframe>
+                            <iframe src="" width="100%" height="100%" frameborder="0" title="Live Scoreboard" onload="adjustBottomRowHeight()"></iframe>
                         </div>
                     </div>
                     <div class="nav-group results" aria-label="Results section" role="region">
@@ -556,7 +556,7 @@
                         <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS7_Resources/Sprint2/Seeding_Apparent.ods" target="_blank" download>Seeding Apparent</a>
                         <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS7_Resources/Sprint2/Seeding_Full.ods" target="_blank" download>Seeding Full</a>
                         <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS7_Resources/Sprint2/Round_by_Round.ods" target="_blank" download>Roundwise</a>
-                        <a href="https://docs.google.com/spreadsheets/d/1ytlURpxM8D7gZumt6dKuoAHMSD3z-lRZRLEzTAGaG8w" target="_blank">Live Scoreboard</a>
+                        <a href="#" target="_blank">Live Scoreboard</a>
                         <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS7_Resources/Sprint2/Results.ods" target="_blank" download>Results</a>
                     </div>
                     <div class="nav-group seeding" aria-label="Seeding section" role="region">
@@ -573,7 +573,7 @@
                             <h2>Live Scoreboard</h2>
                         </div>
                         <div class="nav-group__content">
-                            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTvlsM1PKva5GtEtSMl-N_clMz1xuDmHnv8yoZnz7Yu_nejeLOvW1Wo9t2YG3ebTHXhXC9o0kaCAap9/pubhtml?gid=807253230&single=true" width="100%" height="100%" frameborder="0" title="Live Scoreboard Sprint 2" onload="adjustBottomRowHeight()"></iframe>
+                            <iframe src="" width="100%" height="100%" frameborder="0" title="Live Scoreboard Sprint 2" onload="adjustBottomRowHeight()"></iframe>
                         </div>
                     </div>
                     <div class="nav-group results" aria-label="Results section" role="region">
