quickpatch to allow map archive access

--- a/ALS7.html
+++ b/ALS7.html
@@ -51,7 +51,7 @@
         <div class="nav-group reference-links" aria-label="Reference links section" role="region">
             <a class="resource-link" data-file="Map_Contest.ods" download>Map Contest Results</a>
             <a href="https://aoe2cm.net/preset/nOxHA" target="_blank">Map Draft</a>
-            <a class="resource-link" data-file="Map_Archive.zip" download>Map Archive</a>
+            <a href="ALS7_Resources/Map_Archive.zip" target="_blank">Map Archive</a>
             <a href="https://aoe2cm.net/preset/EjvqT" target="_blank">Civilization Draft</a>
         </div>
 
