Added seeding information for ALS7 Sprint 2

--- a/ALS7.html
+++ b/ALS7.html
@@ -546,7 +546,7 @@
                         </div>
                         <div class="nav-group__content">
                             <ul>
-                                <li>Template bullet point 1 for Notes.</li>
+                                <li>Participant "cerasito" lacked minimum required games to register (96/100). Exception granted due to being close to target with normal win rate. Player may compete for prize.</li>
                             </ul>
                         </div>
                     </div>
