Added Sign Up and View Signups buttons

--- a/ALS7.html
+++ b/ALS7.html
@@ -53,6 +53,8 @@
             <a href="https://aoe2cm.net/preset/nOxHA" target="_blank">Map Draft</a>
             <a class="resource-link" data-file="Map_Archive.zip" download>Map Archive</a>
             <a href="https://aoe2cm.net/preset/EjvqT" target="_blank">Civilization Draft</a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSfhK2aKf_JDuexuSibfBlqUvwG6RRAgC171BdIu9tVs3bvj2Q/viewform?usp=sharing" target="_blank">Sign Up</a>
+            <a href="https://docs.google.com/spreadsheets/d/1EICIfO41B5PudTbgvwgBbc4u1sjhVu6il4vDXiX9Ses/edit?resourcekey=&gid=1866421962#gid=1866421962" target="_blank">View Signups</a>
         </div>
 
         <div class="nav-group information-left" aria-label="Information left section" role="region">
