Update ALS8 Webpage

--- a/ALS8.html
+++ b/ALS8.html
@@ -36,23 +36,25 @@
                 <ul>
                     <li>Duel (1v1)</li>
                     <li>Unique Round Robin System</li>
-                    <li>Two Independently-Scored Sprints with 4 Round Each. Each Round is Play-All-Two</li>
-                    <li>Sprint 1 Has 1/3 Player Prize Pool, Sprint 2 Has 2/3 Player Prize Pool</li>
+                    <li>Two Independently-Scored Sprints with 4 Round Each. Each Round is Play-All-Two or Play-All-Three (Player-Choice)</li>
+                    <li>Sprint 1 Has ~1/3 Player Prize Pool, Sprint 2 Has ~2/3 Player Prize Pool</li>
                     <li>Players Matched Against Nearest Available Opponents, Minimizing Skill Gap</li>
                     <li>Player Performance Calculated by Comparing Actual Win Rate Against Theoretical Win Rate</li>
                     <li>Winner Selection Independent of Skill, Depends Only On Participation and Performance</li>
                     <li>Payout Calculation to Winners Depends on Performance, With Bias Toward Higher Skill</li>
                     <li>Standard Victory Condition, With Antiquity Mode On</li>
-                    <li>Custom Map Pool, Player Choice Returning Maps</li>
+                    <li>Adapted Classic Standard Maps to Theme "A Million Ways to Die in the Middle Ages", Combining Maximum Possible Victory Conditions!</li>
                 </ul>
             </div>
         </div>
 
         <div class="nav-group reference-links" aria-label="Reference links section" role="region">
-            <a class="resource-link" data-file="Map_Contest.ods" download>Map Contest Results</a>
+            <a class="resource-link" data-file="#" download>Map Contest Results</a>
             <a href="#" target="_blank">Map Draft</a>
-            <a class="resource-link" data-file="Map_Archive.zip" download>Map Archive</a>
+            <a class="resource-link" data-file="#" download>Map Archive</a>
             <a href="https://aoe2cm.net/preset/EjvqT" target="_blank">Civilization Draft</a>
+            <a href="https://forms.gle/ZBxGQufXkSEELcSZ6" target="_blank">Sign Up</a>
+            <a href="https://docs.google.com/spreadsheets/d/1HfdG7YO-ql1TjHx37bGE6BMf6OTyuVJlTcMh9l7DlpQ/edit?resourcekey=&gid=993490506#gid=993490506" target="_blank">View Signups</a>
         </div>
 
         <div class="nav-group information-left" aria-label="Information left section" role="region">
@@ -232,7 +234,7 @@
                         </g>
                     </a>
                     <!-- PSRM-002 Node -->
-                    <a href="https://Alchemy-AOE-Community.github.io/RedirectLatest.html?file=CHEM-PSRM-002" data-folder="CHEM-PSRM-002" target="_blank" tabindex="0" aria-label="PSRM-002" role="button" class="pdf-link">
+                    <!-- <a href="https://Alchemy-AOE-Community.github.io/RedirectLatest.html?file=CHEM-PSRM-002" data-folder="CHEM-PSRM-002" target="_blank" tabindex="0" aria-label="PSRM-002" role="button" class="pdf-link">
                         <g>
                             <title>PSRM-002</title>
                             <g clip-path="url(#clip-psrm-002)">
@@ -243,9 +245,9 @@
                             <text x="8.8" y="17.2" class="hierarchy-text">PSRM</text>
                             <text x="8.8" y="18.8" class="hierarchy-text">-002</text>
                         </g>
-                    </a>
+                    </a> -->
                     <!-- PSRM-003 Node -->
-                    <a href="https://Alchemy-AOE-Community.github.io/RedirectLatest.html?file=CHEM-PSRM-003" data-folder="CHEM-PSRM-003" target="_blank" tabindex="0" aria-label="PSRM-003" role="button" class="pdf-link">
+                    <!-- <a href="https://Alchemy-AOE-Community.github.io/RedirectLatest.html?file=CHEM-PSRM-003" data-folder="CHEM-PSRM-003" target="_blank" tabindex="0" aria-label="PSRM-003" role="button" class="pdf-link">
                         <g>
                             <title>PSRM-003</title>
                             <g clip-path="url(#clip-psrm-003)">
@@ -256,7 +258,7 @@
                             <text x="23.3836" y="17.2" class="hierarchy-text">PSRM</text>
                             <text x="23.3836" y="18.8" class="hierarchy-text">-003</text>
                         </g>
-                    </a>
+                    </a> -->
                     <!-- MTHD Nodes -->
                     <a href="https://Alchemy-AOE-Community.github.io/RedirectLatest.html?file=CHEM-MTHD-002" data-folder="CHEM-MTHD-002" target="_blank" tabindex="0" aria-label="MTHD-002" role="button" class="pdf-link">
                         <g>
@@ -331,7 +333,7 @@
                         </g>
                     </a>
                     <!-- CSRM Nodes -->
-                    <a href="https://Alchemy-AOE-Community.github.io/RedirectLatest.html?file=CHEM-CSRM-01" data-folder="CHEM-CSRM-01" target="_blank" tabindex="0" aria-label="CSRM-01" role="button" class="pdf-link">
+                    <!-- <a href="https://Alchemy-AOE-Community.github.io/RedirectLatest.html?file=CHEM-CSRM-01" data-folder="CHEM-CSRM-01" target="_blank" tabindex="0" aria-label="CSRM-01" role="button" class="pdf-link">
                         <g>
                             <title>CSRM-01</title>
                             <g clip-path="url(#clip-csrm-01)">
@@ -438,9 +440,9 @@
                             <text x="98.84" y="39.7" class="hierarchy-text">CSRM</text>
                             <text x="98.84" y="41.3" class="hierarchy-text">-09</text>
                         </g>
-                    </a>
+                    </a> -->
                     <!-- GSRM Nodes -->
-                    <a href="https://Alchemy-AOE-Community.github.io/RedirectLatest.html?file=CHEM-GSRM-UNK-1" data-folder="CHEM-GSRM-UNK-1" target="_blank" tabindex="0" aria-label="GSRM-UNK-1" role="button" class="pdf-link">
+                    <!-- <a href="https://Alchemy-AOE-Community.github.io/RedirectLatest.html?file=CHEM-GSRM-UNK-1" data-folder="CHEM-GSRM-UNK-1" target="_blank" tabindex="0" aria-label="GSRM-UNK-1" role="button" class="pdf-link">
                         <g>
                             <title>GSRM-UNK-1</title>
                             <g clip-path="url(#clip-gsrm-01)">
@@ -547,9 +549,9 @@
                             <text x="98.84" y="55.7" class="hierarchy-text">GSRM</text>
                             <text x="98.84" y="57.3" class="hierarchy-text">-UNK-9</text>
                         </g>
-                    </a>
+                    </a> -->
                     <!-- STND Nodes -->
-                    <a href="https://Alchemy-AOE-Community.github.io/RedirectLatest.html?file=CHEM-STND-001" data-folder="CHEM-STND-001" target="_blank" tabindex="0" aria-label="STND-001" role="button" class="pdf-link">
+                    <!-- <a href="https://Alchemy-AOE-Community.github.io/RedirectLatest.html?file=CHEM-STND-001" data-folder="CHEM-STND-001" target="_blank" tabindex="0" aria-label="STND-001" role="button" class="pdf-link">
                         <g>
                             <title>STND-001</title>
                             <g clip-path="url(#clip-stnd-001)">
@@ -596,7 +598,7 @@
                             <text x="80.8" y="69.2" class="hierarchy-text">STND</text>
                             <text x="80.8" y="70.8" class="hierarchy-text">-004</text>
                         </g>
-                    </a>
+                    </a> -->
                     <a href="https://Alchemy-AOE-Community.github.io/RedirectLatest.html?file=CHEM-STND-005" data-folder="CHEM-STND-005" target="_blank" tabindex="0" aria-label="STND-005" role="button" class="pdf-link">
                         <g>
                             <title>STND-005</title>
@@ -611,28 +613,28 @@
                     </a>
                     <!-- Connecting Lines -->
                     <line x1="53.8" y1="10" x2="53.8" y2="12" class="hierarchy-arrow"/>
-                    <line x1="8.8" y1="12" x2="121.2" y2="12" class="hierarchy-line"/>
-                    <line x1="8.8" y1="12" x2="8.8" y2="14" class="hierarchy-arrow"/>
-                    <line x1="23.3836" y1="12" x2="23.3836" y2="14" class="hierarchy-arrow"/>
+                    <line x1="37.9672" y1="12" x2="121.2" y2="12" class="hierarchy-line"/>
+                    <!-- <line x1="8.8" y1="12" x2="8.8" y2="14" class="hierarchy-arrow"/> -->
+                    <!-- <line x1="23.3836" y1="12" x2="23.3836" y2="14" class="hierarchy-arrow"/> -->
                     <line x1="37.9672" y1="12" x2="37.9672" y2="14" class="hierarchy-arrow"/>
                     <line x1="52.5508" y1="12" x2="52.5508" y2="14" class="hierarchy-arrow"/>
                     <line x1="67.1344" y1="12" x2="67.1344" y2="14" class="hierarchy-arrow"/>
                     <line x1="81.718" y1="12" x2="81.718" y2="14" class="hierarchy-arrow"/>
                     <line x1="96.3016" y1="12" x2="96.3016" y2="14" class="hierarchy-arrow"/>
                     <line x1="110.8852" y1="12" x2="110.8852" y2="14" class="hierarchy-arrow"/>
-                    <line x1="23.3836" y1="22" x2="23.3836" y2="24" class="hierarchy-arrow"/>
-                    <line x1="19.88" y1="24" x2="110.12" y2="24" class="hierarchy-line"/>
-                    <line x1="19.88" y1="24" x2="19.88" y2="26" class="hierarchy-arrow"/>
-                    <line x1="42.44" y1="24" x2="42.44" y2="26" class="hierarchy-arrow"/>
-                    <line x1="65" y1="24" x2="65" y2="26" class="hierarchy-arrow"/>
-                    <line x1="87.56" y1="24" x2="87.56" y2="26" class="hierarchy-arrow"/>
-                    <line x1="110.12" y1="24" x2="110.12" y2="26" class="hierarchy-arrow"/>
-                    <line x1="31.16" y1="24" x2="31.16" y2="36" class="hierarchy-arrow"/>
-                    <line x1="53.72" y1="24" x2="53.72" y2="36" class="hierarchy-arrow"/>
-                    <line x1="76.28" y1="24" x2="76.28" y2="36" class="hierarchy-arrow"/>
-                    <line x1="98.84" y1="24" x2="98.84" y2="36" class="hierarchy-arrow"/>
+                    <!-- <line x1="23.3836" y1="22" x2="23.3836" y2="24" class="hierarchy-arrow"/> -->
+                    <!-- <line x1="19.88" y1="24" x2="110.12" y2="24" class="hierarchy-line"/> -->
+                    <!-- <line x1="19.88" y1="24" x2="19.88" y2="26" class="hierarchy-arrow"/> -->
+                    <!-- <line x1="42.44" y1="24" x2="42.44" y2="26" class="hierarchy-arrow"/> -->
+                    <!-- <line x1="65" y1="24" x2="65" y2="26" class="hierarchy-arrow"/> -->
+                    <!-- <line x1="87.56" y1="24" x2="87.56" y2="26" class="hierarchy-arrow"/> -->
+                    <!-- <line x1="110.12" y1="24" x2="110.12" y2="26" class="hierarchy-arrow"/> -->
+                    <!-- <line x1="31.16" y1="24" x2="31.16" y2="36" class="hierarchy-arrow"/> -->
+                    <!-- <line x1="53.72" y1="24" x2="53.72" y2="36" class="hierarchy-arrow"/> -->
+                    <!-- <line x1="76.28" y1="24" x2="76.28" y2="36" class="hierarchy-arrow"/> -->
+                    <!-- <line x1="98.84" y1="24" x2="98.84" y2="36" class="hierarchy-arrow"/> -->
                     <!-- Arrows from CSRMs to GSRMs -->
-                    <line x1="19.88" y1="35" x2="19.88" y2="52.5" class="hierarchy-arrow"/>
+                    <!-- <line x1="19.88" y1="35" x2="19.88" y2="52.5" class="hierarchy-arrow"/>
                     <line x1="42.44" y1="35" x2="42.44" y2="52.5" class="hierarchy-arrow"/>
                     <line x1="65" y1="35" x2="65" y2="52.5" class="hierarchy-arrow"/>
                     <line x1="87.56" y1="35" x2="87.56" y2="52.5" class="hierarchy-arrow"/>
@@ -640,9 +642,9 @@
                     <line x1="31.16" y1="45" x2="31.16" y2="52.5" class="hierarchy-arrow"/>
                     <line x1="53.72" y1="45" x2="53.72" y2="52.5" class="hierarchy-arrow"/>
                     <line x1="76.28" y1="45" x2="76.28" y2="52.5" class="hierarchy-arrow"/>
-                    <line x1="98.84" y1="45" x2="98.84" y2="52.5" class="hierarchy-arrow"/>
+                    <line x1="98.84" y1="45" x2="98.84" y2="52.5" class="hierarchy-arrow"/> -->
                     <!-- Arrows from GSRMs to horizontal -->
-                    <line x1="19.88" y1="60.5" x2="19.88" y2="63.25" class="hierarchy-arrow"/>
+                    <!-- <line x1="19.88" y1="60.5" x2="19.88" y2="63.25" class="hierarchy-arrow"/>
                     <line x1="42.44" y1="60.5" x2="42.44" y2="63.25" class="hierarchy-arrow"/>
                     <line x1="65" y1="60.5" x2="65" y2="63.25" class="hierarchy-arrow"/>
                     <line x1="87.56" y1="60.5" x2="87.56" y2="63.25" class="hierarchy-arrow"/>
@@ -656,7 +658,7 @@
                     <line x1="56.8" y1="63.25" x2="56.8" y2="66" class="hierarchy-arrow"/>
                     <line x1="80.8" y1="63.25" x2="80.8" y2="66" class="hierarchy-arrow"/>
                     <line x1="8.8" y1="22" x2="8.8" y2="63.25" class="hierarchy-line"/>
-                    <line x1="8.8" y1="63.25" x2="8.8" y2="66" class="hierarchy-arrow"/>
+                    <line x1="8.8" y1="63.25" x2="8.8" y2="66" class="hierarchy-arrow"/> -->
                     <!-- Drop-down arrow from extended second row horizontal to STND-005 -->
                     <line x1="121.2" y1="12" x2="121.2" y2="66" class="hierarchy-arrow"/>
                 </svg>
@@ -676,7 +678,7 @@
                         </div>
                         <div class="nav-group__content">
                             <ul>
-                                <li>Sample Notes</li>
+                                <li>TBD</li>
                             </ul>
                         </div>
                     </div>
@@ -724,7 +726,7 @@
                         </div>
                         <div class="nav-group__content">
                             <ul>
-                                <li>Template bullet point 1 for Notes.</li>
+                                <li>TBD</li>
                             </ul>
                         </div>
                     </div>
