Added ALS8 Map_Archive.zip

--- a/ALS8.html
+++ b/ALS8.html
@@ -51,7 +51,7 @@
         <div class="nav-group reference-links" aria-label="Reference links section" role="region">
             <a class="resource-link" data-file="#" download>Map Contest Results</a>
             <a href="#" target="_blank">Map Draft</a>
-            <a class="resource-link" data-file="#" download>Map Archive</a>
+            <a class="resource-link" data-file="Map_Archive.zip" download>Map Archive</a>
             <a href="https://aoe2cm.net/preset/EjvqT" target="_blank">Civilization Draft</a>
             <a href="https://forms.gle/ZBxGQufXkSEELcSZ6" target="_blank">Sign Up</a>
             <a href="https://docs.google.com/spreadsheets/d/1HfdG7YO-ql1TjHx37bGE6BMf6OTyuVJlTcMh9l7DlpQ/edit?resourcekey=&gid=993490506#gid=993490506" target="_blank">View Signups</a>
