Added map draft & registration, ALS8

--- a/ALS8.html
+++ b/ALS8.html
@@ -49,8 +49,8 @@
         </div>
 
         <div class="nav-group reference-links" aria-label="Reference links section" role="region">
-            <a class="resource-link" data-file="#" download>Map Contest Results</a>
-            <a href="#" target="_blank">Map Draft</a>
+            <a class="resource-link" data-file="#" download>No Map Contest</a>
+            <a href="https://aoe2cm.net/preset/dXKEr" target="_blank">Map Draft</a>
             <a class="resource-link" data-file="Map_Archive.zip" download>Map Archive</a>
             <a href="https://aoe2cm.net/preset/EjvqT" target="_blank">Civilization Draft</a>
             <a href="https://forms.gle/ZBxGQufXkSEELcSZ6" target="_blank">Sign Up</a>
@@ -67,43 +67,43 @@
                     </tr>
                     <tr>
                         <td>1</td>
-                        <td>TBD</td>
-                        <td>TBD</td>
+                        <td>MWDMA_Oasis</td>
+                        <td>TechChariot</td>
                     </tr>
                     <tr>
                         <td>2</td>
-                        <td>TBD</td>
-                        <td>TBD</td>
+                        <td>MWDMA_Highland</td>
+                        <td>Jasouki</td>
                     </tr>
                     <tr>
                         <td>3</td>
-                        <td>TBD</td>
-                        <td>TBD</td>
+                        <td>MWDMA_Arena</td>
+                        <td>TechChariot</td>
                     </tr>
                     <tr>
                         <td>4</td>
-                        <td>TBD</td>
-                        <td>TBD</td>
+                        <td>MWDMA_Salt_Marsh</td>
+                        <td>Jasouki</td>
                     </tr>
                     <tr>
                         <td>5</td>
-                        <td>TBD</td>
-                        <td>TBD</td>
+                        <td>MWDMA_Archipelago</td>
+                        <td>TechChariot</td>
                     </tr>
                     <tr>
                         <td>6</td>
-                        <td>TBD</td>
-                        <td>TBD</td>
+                        <td>MWDMA_Gold_Rush</td>
+                        <td>TechChariot</td>
                     </tr>
                     <tr>
                         <td>7</td>
-                        <td>TBD</td>
-                        <td>TBD</td>
+                        <td>MWDMA_Continental</td>
+                        <td>TechChariot</td>
                     </tr>
                     <tr>
                         <td>8</td>
-                        <td>TBD</td>
-                        <td>TBD</td>
+                        <td>MWDMA_Rivers</td>
+                        <td>TechChariot</td>
                     </tr>
                 </table>
             </div>
@@ -678,18 +678,16 @@
                         </div>
                         <div class="nav-group__content">
                             <ul>
-                                <li>TBD</li>
+                                <li>Participant "theNagraj" registered but ineligible for prize due to lack of sufficient ranked 1v1s (46/100).</li>
+                                <li>Participant "ShiXo" granted exception to schedule and complete Round 4 at any time during the Sprint.</li>
                             </ul>
                         </div>
                     </div>
                     <div class="buttons-container">
-                        <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS7_Resources/Sprint1/Registration.ods" target="_blank" download>Registration</a>
-                        <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS7_Resources/Sprint1/Seeding_Summary.ods" target="_blank" download>Seeding Summary</a>
-                        <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS7_Resources/Sprint1/Seeding_Apparent.ods" target="_blank" download>Seeding Apparent</a>
-                        <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS7_Resources/Sprint1/Seeding_Full.ods" target="_blank" download>Seeding Full</a>
-                        <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS7_Resources/Sprint1/Round_by_Round.ods" target="_blank" download>Roundwise</a>
-                        <a href="#" target="_blank">Live Scoreboard</a>
-                        <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS7_Resources/Sprint1/Results.ods" target="_blank" download>Results</a>
+                        <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS8_Resources/Sprint1/Registration.ods" target="_blank" download>Registration</a>
+                        <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS8_Resources/Sprint1/Seeding.ods" target="_blank" download>Seeding</a>
+                        <a href="https://docs.google.com/spreadsheets/d/1F3gzSUl2kwcCXdFy2f6TumgPIwRg4_K_Q3JjaGJW7OU/edit?gid=807253230#gid=807253230" target="_blank">Live Scoreboard</a>
+                        <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS8_Resources/Sprint1/Results.ods" target="_blank" download>Results</a>
                     </div>
                     <div class="nav-group seeding" aria-label="Seeding section" role="region">
                         <div class="nav-group__title">
