--- a/ALS8.html
+++ b/ALS8.html
@@ -703,7 +703,7 @@
                             <h2>Live Scoreboard</h2>
                         </div>
                         <div class="nav-group__content">
-                            <iframe src="" width="100%" height="100%" frameborder="0" title="Live Scoreboard" onload="adjustBottomRowHeight()"></iframe>
+                            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTywVx5DskPrejThabjiHuGYLU841gOIe0bsxqGb3SPKbHgLWXUF7X_S2zkPfCgOyDBBUL8t5d2Vjyv/pubhtml?gid=807253230&single=true" width="100%" height="100%" frameborder="0" title="Live Scoreboard" onload="adjustBottomRowHeight()"></iframe>
                         </div>
                     </div>
                     <div class="nav-group results" aria-label="Results section" role="region">
