--- a/ALS8.html
+++ b/ALS8.html
@@ -43,7 +43,7 @@
                     <li>Winner Selection Independent of Skill, Depends Only On Participation and Performance</li>
                     <li>Payout Calculation to Winners Depends on Performance, With Bias Toward Higher Skill</li>
                     <li>Standard Victory Condition, With Antiquity Mode On</li>
-                    <li>Theme "A Million Ways to Die in the Middle Ages" Combines Maximum Possible Victory Conditions!</li>
+                    <li>Theme "A Million Ways to Die in the Middle Ages"</li>
                 </ul>
             </div>
         </div>
